syntax = "proto3";

package mga.greeting;

option go_package = "greetingpb";

// Greeter responds to greetings.
service Greeter {
  // SayHello says hello to someone.
  rpc SayHello(HelloRequest) returns (HelloResponse);
}

// HelloRequest contains a greeting that the service needs to respond to.
message HelloRequest {
  string name = 1;
}

// HelloResponse is the the response to a greeting.
message HelloResponse {
  string reply = 1;
}
